part_4/todo-backend/manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
